--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "2.16.3",
   "repository": "git://github.com/hapijs/hoek",
   "main": "lib/index.js",
+  "browser": {
+    "crypto": false
+  },
   "keywords": [
     "utilities"
   ],
